<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BMNY</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="sign_up_msg">Have an account?Click here</string> 
  <string name="lbl_title_username">Username</string> 
  <string name="lbl_title_mobile">Mobile #</string> 
  <string name="lbl_title_email">Email</string> 
  <string name="lbl_title_who_can">Send me Snaps</string> 
  <string name="alert_dialog_single_choice">Choose</string> 
  <string name="alert_dialog_cancel">Cancel</string> 
  <string name="alert_dialog_ok">Ok</string> 
  <string name="lbl_music_name">Name</string> 
  <string name="lbl_music_email">Email</string> 
  <string name="lbl_music_city">City</string> 
  <string name="lbl_music_state">State</string> 
  <string name="lbl_music_send">Send</string> 
  <string name="lbl_music_subscribe">SUBSCRIBE FOR FREE MUSIC DOWNLOAD</string> 
     
  	<string name="progress_message">Signing in to Google&#8230;</string>
    <string name="sign_out_button_name">Sign out</string>
    <string name="revoke_access_button_name">Revoke access</string>
    <string name="default_status" />
    <string name="greeting_status">%s.</string>
    <string name="signed_in_status">Signed in.</string>
    <string name="signed_out_status">Signed out.</string>

</resources>